--- a/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-gotify.deploy/tasks/main.yml
@@ -21,19 +21,19 @@
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   with_fileglob:
     - "{{ role_path }}/app/deploy/*.yaml*"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
 
 - name: Wait for Gotify to be available
   k8s_info:
     kind: StatefulSet
     namespace: "{{ gotify.namespace }}"
     name: gotify
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   register: k8s_result
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
   until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
   retries: 10
   delay: 3
