--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/handlers/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/handlers/main.yml
@@ -4,13 +4,12 @@
 # The following tasks ensures that each time something changes in ES deployment, security configurations are properly updated.
 - name: Reconfigure security
   command:
-    kubectl --namespace={{ elasticsearch.namespace }} exec -it elasticsearch-0 -- \
+    kubectl {{ kubectl_params }} \
+      --namespace={{ elasticsearch.namespace }} exec -it elasticsearch-0 -- \
       bash /usr/share/elasticsearch/plugins/opendistro_security/tools/securityadmin.sh \
       -icl -nhnv \
       -cd /usr/share/elasticsearch/plugins/opendistro_security/securityconfig/ \
       -cacert /usr/share/elasticsearch/config/certs/ca.crt \
       -cert /usr/share/elasticsearch/config/certs/server.crt \
       -key /usr/share/elasticsearch/config/certs/server.key
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
   listen: "Reconfigure Elasticsearch security"
