--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -42,30 +42,30 @@
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   register: elasticsearch_deployment
   with_fileglob:
     - "{{ role_path }}/app/deploy/*.yaml*"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
   notify: "Reconfigure Elasticsearch security"
 
 - name: Deploy ElasticSearch Exporter
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   with_fileglob:
     - "{{ role_path }}/app/deploy/prometheus_exporter/*.yaml*"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
 
 - name: Wait for ElasticSearch to be available
   k8s_info:
     kind: StatefulSet
     namespace: "{{ elasticsearch.namespace }}"
     name: elasticsearch
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   register: k8s_result
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
   until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
   retries: 60
   delay: 3
@@ -82,9 +82,9 @@
     kind: StatefulSet
     namespace: "{{ elasticsearch.namespace }}"
     name: elasticsearch
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   register: k8s_result
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
   until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
   retries: 60
   delay: 3
