--- a/ansible/install_applications/roles/monitoring-grafana.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/tasks/main.yml
@@ -29,7 +29,7 @@
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   with_fileglob:
     - "{{ role_path }}/app/deploy/*.yaml*"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
