--- a/ansible/install_infra/roles/apcups-kubernetes/tasks/main.yml
+++ b/ansible/install_infra/roles/apcups-kubernetes/tasks/main.yml
@@ -6,15 +6,15 @@
     kind: Namespace
     name: monitoring-apcups-exporter
     state: present
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
 
 - name: Create Kubernetes service
   k8s:
-    definition: "{{ lookup('template', 'kubernetes/' + item) }}"
+    definition: "{{ lookup('template', item) }}"
     state: present
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
   with_items:
     - endpoint.yaml.j2
     - service.yaml.j2
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
