--- a/ansible/install_infra/roles/kubernetes-master-cni-deploy/tasks/calico.yml
+++ b/ansible/install_infra/roles/kubernetes-master-cni-deploy/tasks/calico.yml
@@ -4,5 +4,5 @@
   k8s:
     definition: "{{ lookup('template', 'calico/calico.yaml.j2') }}"
     state: present
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
+    kubeconfig: "{{ kubeconfig_path }}"
+    context: "{{ kubeconfig_context }}"
