--- a/ansible/install_infra/roles/kubernetes-storage-local/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-storage-local/tasks/main.yml
@@ -4,8 +4,9 @@
   k8s:
     definition: "{{ lookup('template', 'local-persistent-volume.yaml.j2') }}"
     state: present
+    kubeconfig: "{{ hostvars[groups.controller | first].kubeconfig_path }}"
+    context: "{{ hostvars[groups.controller | first].kubeconfig_context }}"
+  delegate_to: "{{ groups.controller | first }}"
   loop: "{{ local_lvm_storage | default({}) | dict2items }}"
   loop_control:
     label: "{{ item.key }}"
-  become: yes
-  become_user: "{{ kubernetes_user.name }}"
