Change pki generation path on controller

--- a/ansible/install_applications/roles/_base.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/_base.deploy/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 
-custom_ssl_pki_root_dir: /etc/ssl/custom
+custom_ssl_pki_generation_root_dir: /etc/ssl/custom
 kubernetes_glusterfs_endpoint: glusterfs-cluster
 kubernetes_nas_nfs_storage_class_name: nas-nfs
