--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ vagrant/.vagrant
 vagrant/vagrant_kube_admin.conf
 ansible/*.retry
 ansible/inventories/vagrant/.kube
+ansible/inventories/vagrant/ssl
