--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -28,9 +28,9 @@
     src: "{{ item }}"
   register: elasticsearch_generated_certificate_files
   with_items:
-    - "{{ custom_ssl_pki_root_dir }}/cluster/ca.crt"
-    - "{{ custom_ssl_pki_root_dir }}/cluster/elasticsearch/server.crt"
-    - "{{ custom_ssl_pki_root_dir }}/cluster/elasticsearch/server.key"
+    - "{{ custom_ssl_pki_generation_root_dir }}/cluster/ca.crt"
+    - "{{ custom_ssl_pki_generation_root_dir }}/cluster/elasticsearch/server.crt"
+    - "{{ custom_ssl_pki_generation_root_dir }}/cluster/elasticsearch/server.key"
 
 - name: List included security config files
   set_fact:
