--- a/ansible/install_infra/roles/openssl-pki-deploy/defaults/main.yml
+++ b/ansible/install_infra/roles/openssl-pki-deploy/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 
-custom_ssl_pki_generation_root_dir: "{{ inventory_dir }}/ssl"
-custom_ssl_pki_root_dir: /etc/ssl/custom
+#custom_ssl_pki_generation_root_dir: "/etc/ssl/custom-generation"
+#custom_ssl_pki_root_dir: /etc/ssl/custom
