Move kubernetes config on controller under the user home

--- a/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
+++ b/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
@@ -1,8 +1,8 @@
 ---
 
-kubeconfig_path: "{{ inventory_dir }}/.kube/config_vagrant"
+kubeconfig_path: "{{ controller_working_dir }}/.kube/config"
 kubeconfig_context: kubernetes-admin@kubernetes_vagrant
-kubectl_params: "--kubeconfig={{ kubeconfig_path }} --context={{ kubeconfig_context }}"
+kubectl_params: "--kubeconfig {{ kubeconfig_path }} --context {{ kubeconfig_context }}"
 
 kubernetes_nfs_storage:
   nfs-multimedia:
