Configure the controller to resolve the registry Install docker to be able to build and push images

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -87,6 +87,8 @@
 - name: Bootstrap controller
   hosts: controller
   roles:
+    - dns-client
+    - docker
     - kubernetes-controller-bootstrap
 
 - name: Deploy CNI
