--- a/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
+++ b/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
@@ -108,6 +108,8 @@ nginx_sites:
         proxy_pass: https://kubernetes-https-ingress
         proxy_enable_websocket: True
         content: |
+          # disable any limits to avoid HTTP 413 for large image uploads
+          client_max_body_size 0;
           # required to avoid HTTP 411: see Issue #1486 (https://github.com/moby/moby/issues/1486)
           chunked_transfer_encoding on;
 
