--- a/ansible/inventories/vagrant/group_vars/all/controller.yml
+++ b/ansible/inventories/vagrant/group_vars/all/controller.yml
@@ -2,3 +2,4 @@
 
 controller_working_dir: ~/home-server-provisioning_vagrant
 custom_ssl_pki_generation_root_dir: "{{ controller_working_dir }}/ssl"
+kubernetes_pki_fetch_dir: "{{ controller_working_dir }}/kubernetes-pki"
